--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "polygon-pol-indexer"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "indexer"
+path = "src/main.rs"
+
+[[bin]]
+name = "cli"
+path = "src/bin/cli.rs"
+
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
@@ -13,3 +21,20 @@ thiserror = "1.0"
 log = "0.4"
 env_logger = "0.10"
 once_cell = "1.19"
+clap = { version = "4.0", features = ["derive"] }
+rand = "0.8"
+chrono = { version = "0.4", features = ["serde"] }
+toml = "0.8"
+config = "0.14"
+
+[dev-dependencies]
+tokio-test = "0.4"
+mockito = "1.2"
+criterion = { version = "0.5", features = ["html_reports"] }
+tempfile = "3.8"
+serial_test = "3.0"
+wiremock = "0.5"
+
+[[bench]]
+name = "database_benchmarks"
+harness = false
