--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/main.rs"
 name = "cli"
 path = "src/bin/cli.rs"
 
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
@@ -26,6 +30,9 @@ rand = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 toml = "0.8"
 config = "0.14"
+axum = "0.7"
+tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.5", features = ["cors", "trace"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
